--- a/src/assets/stylesheets/custom.scss
+++ b/src/assets/stylesheets/custom.scss
@@ -13,6 +13,9 @@ $textCenter: center;
 //colors
 .color-grey{ color: $color-pf-black-800 !important; }
 
+.no-padding{
+    padding: 0;
+}
 // functions
 //convert px to em/rem
 @function em($px) {
